# PyUrl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml  scripts.py
PyUrl/: app.py
PyUrl/backend/: app.py  config.py  crud.py  database.py  models.py  schemas.py  utils.py
PyUrl/frontend/: Home.py
PyUrl/frontend/components/: displays.py  forms.py  layout.py
PyUrl/frontend/pages/: 1_Shorten_URL.py  2_Get_URL_Info.py
PyUrl/frontend/services/: api_service.py
PyUrl/templates/: home.html  shorten.html
backend/: app.py  schemas.py  utils.py
migrations/: env.py
migrations/versions/: fa1a5879156f_create_urls_table.py
