[tool.poetry]
name = "PyUrl"
version = "0.1.0"
description = ""
authors = ["ajratnam <ajratnam.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[tool.poetry.scripts]
server = "PyUrl.backend.app:start_server"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
